# House_Rental_site

./: .gitignore  cloudinary_upload.py  db.sqlite3  main.py  manage.py  pyproject.toml  seed.py  vercel.json
accounts/: admin.py  models.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_customuser_profile_image.py  0003_customuser_profile_image.py
advertisements/: admin.py  dashboard.py  models.py  serializers.py  urls.py  views.py
advertisements/migrations/: 0001_initial.py  0002_remove_advertisement_featured_image_and_more.py  0003_advertisement_featured_image_and_more.py
favorites/: admin.py  models.py  serializers.py  urls.py  views.py
favorites/migrations/: 0001_initial.py
house_rental/: asgi.py  settings.py  urls.py  wsgi.py
rent_requests/: admin.py  models.py  serializers.py  urls.py  views.py
rent_requests/migrations/: 0001_initial.py
reviews/: admin.py  models.py  serializers.py  views.py
reviews/migrations/: 0001_initial.py
